--- a/True Event/95 CI 1.ipynb
+++ b/True Event/95 CI 1.ipynb
@@ -103,9 +103,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy.optimize import curve_fit\n",
-    "import matplotlib.pyplot as plt\n",
+    "# Fitting of data\n",
     "\n",
     "# Define the function to fit\n",
     "def model_function(x, A, B):\n",
